<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.kelas.balancebook.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.kelas.balancebook.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.kelas.balancebook.ui.reports.ReportsFragment"
        android:label="@string/nav_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.kelas.balancebook.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
